// Copyright 2019 The Exonum Team
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package exonum.examples.timestamping;

import "types.proto";
import "google/protobuf/timestamp.proto";

/// Timestamping transaction.
message TxTimestamp { Timestamp content = 1; }

// Stores content's hash and some metadata about it.
message Timestamp {
  exonum.crypto.Hash content_hash = 1;
  string metadata = 2;
}

message TimestampEntry {
  // Timestamp data.
  Timestamp timestamp = 1;
  // Hash of transaction.
  exonum.crypto.Hash tx_hash = 2;
  // Timestamp time.
  google.protobuf.Timestamp time = 3;
}

/// Timestamping configuration.
message Config {
  // Time oracle service name.
  string time_service_name = 1;
}
